--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,9 @@ dev_dependencies:
     sdk: flutter
 
 flutter:
-
   uses-material-design: true
-
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - assets/flutter_i18n/
 
   fonts:
     - family: Lato
