--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_redux: ^0.5.3
   flutter_i18n: ^0.7.0
   intl: ^0.15.7
+  shimmer: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -26,6 +27,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/flutter_i18n/
+    - assets/images/upday_logo.png
+    - assets/images/upday_text.png
 
   fonts:
     - family: Lato
