Write widget tests

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^4.1.1
+  transparent_image: ^1.0.0
 
 flutter:
   uses-material-design: true
